fixes missing color in show_referrers.sass

--- a/app/stylesheets/admin/show_referrers.sass
+++ b/app/stylesheets/admin/show_referrers.sass
@@ -22,4 +22,4 @@ body.application.admin.show_referrers
   h1
     margin: 20px auto
     font-size: 28px
-    color: $cpBlue
+    color: blue
